# end-rs

./: Cargo.toml  LICENSE  README.md  flake.nix
assets/: end.scss  end.yuck
src/: config.rs  daemon.rs  ewwface.rs  generator.rs  main.rs  notifdaemon.rs  socktools.rs  utils.rs
