[package]
name = "end-rs"
version = "0.1.12"
edition = "2021"
description = "Eww notification daemon in rust"
license = "BSD-2-Clause"
homepage = "https://github.com/Dr-42/end-rs"
repository = "https://github.com/Dr-42/end-rs"
keywords = ["eww", "notification", "daemon", "rust", "zbus"]

[dependencies]
zbus = {version = "4.3.0", default-features=false, features = ["tokio"]}
zvariant = { version = "4.1.1" }
tokio = {version = "1.38.0", features = ["full"]}
futures-util = "0.3.30"
toml = "0.8.14"
serde = "1.0.203"
image = "0.25.1"
icon-loader = "0.4.0"
zbus_macros = "4.3.0"
serde_json = "1.0.118"
async-fs = "2.1.2"
shlex = "1.3.0"
